Bug 264193 - [IFC][Ruby] Let's ignore unexpected content inside ruby
Summary: [IFC][Ruby] Let's ignore unexpected content inside ruby
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zalan
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-11-03 18:58 PDT by zalan
Modified: 2023-11-05 06:08 PST (History)
5 users (show)

See Also:


Attachments
[fast-cq]Patch (1.50 KB, patch)
2023-11-03 19:02 PDT, zalan
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description zalan 2023-11-03 18:58:25 PDT
ssia
Comment 1 zalan 2023-11-03 19:02:06 PDT
Created attachment 468480 [details]
[fast-cq]Patch
Comment 2 EWS 2023-11-05 06:07:27 PST
Committed 270241@main (77d7ad725253): <https://commits.webkit.org/270241@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 468480 [details].
Comment 3 Radar WebKit Bug Importer 2023-11-05 06:08:14 PST
<rdar://problem/117964889>