[IFC][Ruby] Let's ignore unexpected content inside ruby https://bugs.webkit.org/show_bug.cgi?id=264193

Reviewed by Antti Koivisto.

ASSERT in debug, ignore in release when measuring and placing unexpected content inside ruby.

* Source/WebCore/layout/formattingContexts/inline/ruby/RubyFormattingContext.cpp:
(WebCore::Layout::RubyFormattingContext::placeRubyContent):
(WebCore::Layout::RubyFormattingContext::logicaWidthForRubyRange const):

Canonical link: https://commits.webkit.org/270241@main